<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/title_dashboard" />
    <item
        android:id="@+id/nav_orders"
        android:icon="@drawable/ic_orders"
        android:title="@string/title_orders" />
    <item
        android:id="@+id/nav_products"
        android:icon="@drawable/ic_products"
        android:title="@string/title_products" />
    <item
        android:id="@+id/nav_vouchers"
        android:icon="@drawable/ic_vouchers"
        android:title="@string/title_vouchers" />
    <item
        android:id="@+id/nav_chatbot"
        android:icon="@drawable/ic_chatbot"
        android:title="@string/title_chatbot" />
</menu>
